[CSS] Css z-index bug on mobile, on comments pages with dropdown menus.

--- a/admin/style/style-mobile-lt850px.css
+++ b/admin/style/style-mobile-lt850px.css
@@ -87,7 +87,7 @@
 		left: -250px;
 		top: 40px;
 		box-shadow: 0px -10px 2px white, 0px 14px 24px rgba(0, 0, 0, 0.6);
-		z-index: 10;
+		z-index: 20;
 		opacity: 0;
 		transition: opacity ease-in .2s, top ease-in .2s, left ease-out 0s .2s;
 	}
